Prevent wrapping the headers in the lonewolf standings table

--- a/heltour/tournament/static/tournament/css/common.css
+++ b/heltour/tournament/static/tournament/css/common.css
@@ -429,6 +429,10 @@ div.inline {
 	background-color: #225622;
 }
 
+#table-lone-standings thead th {
+	white-space: nowrap;
+}
+
 #table-lone-standings .temporary-rank .rank-value {
 	color: #999;
 }
